--- a/app/views/top/index.html.erb
+++ b/app/views/top/index.html.erb
@@ -1,12 +1,10 @@
-<h1>Top Page</h1>
-  <div>
-    <ul>
-      <% if user_signed_in? %>
-        <%= link_to current_user.nickname, "#", class: "user-nickname" %>
-        <%= link_to 'ログアウト', destroy_user_session_path, method: :delete, class: "logout" %>
-      <% else %>
-        <%= link_to 'ログイン', new_user_session_path, class: "login" %>
-        <%= link_to '新規登録', new_user_registration_path, class: "sign-up" %>
-      <% end %>
-    </ul>
+<header class="header">
+  <div class="header__bar row">
+    <h1 class="grid-6">アプリケーション紹介ページ</h1>
+      <div class="grid-6">
+        <%= link_to "ログイン", new_user_session_path, class: "post" %>
+        <%= link_to "新規登録", new_user_registration_path, class: "post" %>
+      </div>
+    </div>
   </div>
+</header>
