カレンダー機能の実装

--- a/app/views/users/_side_bar.html.erb
+++ b/app/views/users/_side_bar.html.erb
@@ -7,40 +7,20 @@
 <div class="categories">
   <div class="main-category">
     <div class="category-name">
-      <h2>新規ヘルスカテゴリー登録</h2>
+    <h4>ヘルスカテゴリー一覧</h4>
       <div class="sub-category">
         <div class="category-name">
-          <a href="#">新規予約</a>
+          <a href="#">予約ページ</a>
         </div>
       </div>
       <div class="sub-category">
         <div class="category-name">
-          <a href="#">新規身体測定</a>
+          <a href="#">身体測定ページ</a>
         </div>
       </div>
       <div class="sub-category">
         <div class="category-name">
-          <a href="#">新規お薬処方</a>
-        </div>
-      </div>
-    </div>
-  </div>
-  <div class="main-category">
-    <div class="category-name">
-    <h2>ヘルスカテゴリー一覧</h2>
-      <div class="sub-category">
-        <div class="category-name">
-          <a href="#">予約一覧</a>
-        </div>
-      </div>
-      <div class="sub-category">
-        <div class="category-name">
-          <a href="#">身体測定一覧</a>
-        </div>
-      </div>
-      <div class="sub-category">
-        <div class="category-name">
-          <a href="#">お薬一覧</a>
+          <a href="#">お薬ページ</a>
         </div>
       </div>
     </div>
