--- a/app/views/reservations/new.html.erb
+++ b/app/views/reservations/new.html.erb
@@ -1,8 +1,4 @@
-＜メイン画面＞
-<%= link_to current_user.nickname, "#", class: "user-nickname" %>
-<%= link_to 'ログアウト', destroy_user_session_path, method: :delete, class: "logout" %>
-<div id='calendar' style="width: 80%; display: block; margin-left: auto; margin-right: auto"></div>
-<div class="modal" id="modalid" tabindex="-1" role="dialog">
+<div class="modal" id="new_event" tabindex="-1" role="dialog">
   <div class="modal-dialog" role="document">
     <div class="modal-content">
       <div class="modal-header">
@@ -13,30 +9,51 @@
       </div>
       <div class="modal-body">
         <div class="form-group field">
-          <%= form_with(model: @reservation, remote: true) do |f| %>
+          <%= form_with(model: @reservations, remote: true) do |f| %>
             <div class="form-inputs">
               <div class="form-group">
-                <%= f.label :name, "予定", class: "form-control-label"%>
+                <%= f.label :department_id, "診療科", class: "form-control-label"%>
                 <div class="input-group" data-target-input="nearest">
-                  <%= f.text_field :title, class: "form-control"%>
+                  <%= f.collection_select(:department_id, Department.all, :id, :name, {}, {class:"form-control"}) %>
                 </div>
               </div>
- 
+
+              <div class="form-group">
+                <%= f.label :name, "病院名", class: "form-control-label"%>
+                <div class="input-group" data-target-input="nearest">
+                  <%= f.text_field :name, class: "form-control"%>
+                </div>
+              </div>
+
+              <div class="form-group">
+                <%= f.label :location, "住所", class: "form-control-label"%>
+                <div class="input-group" data-target-input="nearest">
+                  <%= f.text_field :location, class: "form-control"%>
+                </div>
+              </div>
+
               <div class="form-group">
                 <%= f.label :start, "開始時間", class: "form-control-label"%>
                 <div class="input-group" data-target-input="nearest">
                   <%= f.text_field :start, class: "form-control"%>
                 </div>
               </div>
- 
+
               <div class="form-group">
                 <%= f.label :end, "終了時間", class: "form-control-label"%>
                 <div class="input-group" data-target-input="nearest">
                   <%= f.text_field :end, class: "form-control"%>
                 </div>
               </div>
+
+              <div class="form-group">
+                <%= f.label :note, "コメント", class: "form-control-label"%>
+                <div class="input-group" data-target-input="nearest">
+                  <%= f.text_area :note, class: "form-control"%>
+                </div>
+              </div>
             </div>
- 
+
             <div class="modal-footer actions">
               <%= f.submit "入力完了", class: "btn btn-primary" %>
             </div>
